argocd/app-configs/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mealie
  ports:
    - protocol: TCP
      port: 9000
      targetPort: http
      name: http
